Testsuite/ManualTests/2917/2917.c.lcov
    1|       |/* Functional tests for the function hotpatching feature.  */
    2|       |
    3|       |/* { dg-do compile } */
    4|       |/* { dg-options "-O3 -mzarch" } */
    5|       |
    6|       |__attribute__((hotpatch(0, -1))) int
    7|      1|main(void) { /* { dg-error "attribute is not a comma separated pair of
    8|      1|                non-negative integer constants or too large" } */
    9|      1|  return 0;
   10|      1|}

